--- a/pages/about.html
+++ b/pages/about.html
@@ -9,8 +9,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="about.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../styles/about.css">
+    <link rel="stylesheet" href="../styles/style.css">
 </head>
 
 <body>
@@ -20,13 +20,13 @@
             <nav class="nav">
                 <div class="logo">Brainwave.io</div>
                 <ul class="menu">
-                    <li><a href="home.html">Home</a></li>
-                    <li><a href="about.html" class="active">About us</a></li>
-                    <li><a href="support.html">Support</a></li>
+                    <li><a href="./home.html">Home</a></li>
+                    <li><a href="./about.html" class="active">About us</a></li>
+                    <li><a href="./support.html">Support</a></li>
                 </ul>
                 <div class="auth">
-                    <a href="login.html" class="login">Login</a>
-                    <a href="signup.html" class="signup">Sign up</a>
+                    <a href="./login.html" class="login">Login</a>
+                    <a href="./signup.html" class="signup">Sign up</a>
                 </div>
             </nav>
         </div>
@@ -39,7 +39,7 @@
             <p>With lots of unique blocks, you can easily build a page without coding.<br>Build your next consultancy
                 website within few minutes.</p>
             <div class="hero-img">
-                <img src="./images/Image 1.jpg" alt="Team meeting">
+                <img src="../images/Image 1.jpg" alt="Team meeting">
             </div>
         </div>
     </section>
@@ -67,11 +67,11 @@
             <div class="row">
                 <div class="images-left">
                     <div class="img-grid-stagger">
-                        <img src="./images/man-wearing-yellow-dress-shirt-using-silver-laptop-3184315.png"
+                        <img src="../images/man-wearing-yellow-dress-shirt-using-silver-laptop-3184315.png"
                             alt="Happy man in yellow">
-                        <img src="./images/Image 2.jpg" alt="Team working">
-                        <img src="./images/Image 3.png" alt="Woman with glasses">
-                        <img src="./images/Image 4.png" alt="Man with dreadlocks">
+                        <img src="../images/Image 2.jpg" alt="Team working">
+                        <img src="../images/Image 3.png" alt="Woman with glasses">
+                        <img src="../images/Image 4.png" alt="Man with dreadlocks">
                     </div>
                 </div>
                 <div class="text-right">
@@ -95,7 +95,7 @@
                 <!-- Row 1 -->
                 <div class="member">
                     <div class="avatar red">
-                        <img src="./images/whatever-happens-im-ready-to-face-it.png" alt="Joe Bridges">
+                        <img src="../images/whatever-happens-im-ready-to-face-it.png" alt="Joe Bridges">
                     </div>
                     <h3>Joe Bridges</h3>
                     <p>Founder</p>
@@ -103,7 +103,7 @@
 
                 <div class="member">
                     <div class="avatar teal">
-                        <img src="./images/well-im-not-in-the-mood-for-any-jokes-today.png" alt="Jeffrey Walters">
+                        <img src="../images/well-im-not-in-the-mood-for-any-jokes-today.png" alt="Jeffrey Walters">
                     </div>
                     <h3>Jeffrey Walters</h3>
                     <p>Chief Executive Officer</p>
@@ -111,7 +111,7 @@
 
                 <div class="member">
                     <div class="avatar blue">
-                        <img src="./images/ready-for-a-date.png" alt="Jason Reed">
+                        <img src="../images/ready-for-a-date.png" alt="Jason Reed">
                     </div>
                     <h3>Jason Reed</h3>
                     <p>Chief Technology Officer</p>
@@ -119,7 +119,7 @@
 
                 <div class="member">
                     <div class="avatar coral">
-                        <img src="./images/looking-at-the-day-ahead.png" alt="Nellie Padilla">
+                        <img src="../images/looking-at-the-day-ahead.png" alt="Nellie Padilla">
                     </div>
                     <h3>Nellie Padilla</h3>
                     <p>Creative Director</p>
@@ -128,7 +128,7 @@
                 <!-- Row 2 -->
                 <div class="member">
                     <div class="avatar purple">
-                        <img src="./images/happiness-good-whiskey-a-good-cigar-and-a-great-conversation.png"
+                        <img src="../images/happiness-good-whiskey-a-good-cigar-and-a-great-conversation.png"
                             alt="Dean Bell">
                     </div>
                     <h3>Dean Bell</h3>
@@ -137,7 +137,7 @@
 
                 <div class="member">
                     <div class="avatar orange">
-                        <img src="./images/gonna-marry-a-woman-of-my-life.png" alt="Pearl Brooks">
+                        <img src="../images/gonna-marry-a-woman-of-my-life.png" alt="Pearl Brooks">
                     </div>
                     <h3>Pearl Brooks</h3>
                     <p>Digital Marketer</p>
@@ -145,7 +145,7 @@
 
                 <div class="member">
                     <div class="avatar green">
-                        <img src="./images/thoughtful-handsome-young-man.png" alt="Isaiah Griffin">
+                        <img src="../images/thoughtful-handsome-young-man.png" alt="Isaiah Griffin">
                     </div>
                     <h3>Isaiah Griffin</h3>
                     <p>UX Designer</p>
