--- a/pages/support.html
+++ b/pages/support.html
@@ -9,8 +9,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="support.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../styles/support.css">
+    <link rel="stylesheet" href="../styles/style.css">
 </head>
 
 <body>
@@ -18,15 +18,15 @@
     <header class="header">
         <div class="container">
             <nav class="nav">
-                <div class="logo">Brainwave.io</div>
+              <div class="logo">Brainwave.io</div>
                 <ul class="menu">
-                    <li><a href="home.html">Home</a></li>
-                    <li><a href="about.html">About us</a></li>
-                    <li><a href="support.html" class="active">Support</a></li>
+                    <li><a href="./home.html">Home</a></li>
+                    <li><a href="./about.html" class="active">About us</a></li>
+                    <li><a href="./support.html">Support</a></li>
                 </ul>
                 <div class="auth">
-                    <a href="login.html" class="login">Login</a>
-                    <a href="signup" class="signup">Sign up</a>
+                    <a href="./login.html" class="login">Login</a>
+                    <a href="./signup.html" class="signup">Sign up</a>
                 </div>
             </nav>
         </div>
