--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <nav class="nav">
                 <div class="logo">Brainwave.io</div>
                 <ul class="menu">
-                    <li><a href="./home.html">Home</a></li>
+                    <li><a href="./index.html">Home</a></li>
                     <li><a href="./pages/about.html" class="active">About us</a></li>
                     <li><a href="./pages/support.html">Support</a></li>
                 </ul>
