--- a/pages/about.html
+++ b/pages/about.html
@@ -20,12 +20,12 @@
             <nav class="nav">
                 <div class="logo">Brainwave.io</div>
                 <ul class="menu">
-                    <li><a href="./home.html">Home</a></li>
+                    <li><a href="../index.html">Home</a></li>
                     <li><a href="./about.html" class="active">About us</a></li>
                     <li><a href="./support.html">Support</a></li>
                 </ul>
                 <div class="auth">
-                    <a href="./login.html" class="login">Login</a>
+                    <a href="../login.html" class="login">Login</a>
                     <a href="./signup.html" class="signup">Sign up</a>
                 </div>
             </nav>
