--- a/index.html
+++ b/index.html
@@ -1,95 +1,109 @@
-<!DOCTYPE html>
+git<!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="../styles/about.css">
-    <link rel="stylesheet" href="../styles/style.css">
-</head>
-<body>
-        <header class="header">
-        <div class="container">
-            <nav class="nav">
-                <div class="logo">Brainwave.io</div>
-                <ul class="menu">
-                    <li><a href="./index.html">Home</a></li>
-                    <li><a href="./pages/about.html" class="active">About us</a></li>
-                    <li><a href="./pages/support.html">Support</a></li>
-                </ul>
-                <div class="auth">
-                    <a href="./login.html" class="login">Login</a>
-                    <a href="./signup.html" class="signup">Sign up</a>
-                </div>
-            </nav>
-        </div>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    />
+    <link rel="stylesheet" href="../styles/about.css" />
+    <link rel="stylesheet" href="../styles/style.css" />
+  </head>
+  <body>
+    <header class="header">
+      <div class="container">
+        <nav class="nav">
+          <div class="logo">Brainwave.io</div>
+          <ul class="menu">
+            <li><a href="./index.html">Home</a></li>
+            <li><a href="./pages/about.html" class="active">About us</a></li>
+            <li><a href="./pages/support.html">Support</a></li>
+          </ul>
+          <div class="auth">
+            <a href="./login.html" class="login">Login</a>
+            <a href="./signup.html" class="signup">Sign up</a>
+          </div>
+        </nav>
+      </div>
     </header>
 
-<!-- Footer -->
+    <!-- Footer -->
     <footer class="footer">
-        <div class="container">
-            <div class="footer-content">
-                <div class="footer-brand">
-                    <h3>Brainwave.io</h3>
-                    <p>With lots of unique blocks, you can easily build a page without coding. Build your next landing
-                        page.</p>
-                    <div class="social">
-                        <ul>
-                            <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                            <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                            <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-                            <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-                        </ul>
-                    </div>
-                </div>
-
-                <div class="footer-links">
-                    <h4>Company</h4>
-                    <ul>
-                        <li><a href="#">About us</a></li>
-                        <li><a href="#">Contact us</a></li>
-                        <li><a href="#">Careers</a></li>
-                        <li><a href="#">Press</a></li>
-                    </ul>
-                </div>
-
-                <div class="footer-links">
-                    <h4>Product</h4>
-                    <ul>
-                        <li><a href="#">Features</a></li>
-                        <li><a href="#">Pricing</a></li>
-                        <li><a href="#">News</a></li>
-                        <li><a href="#">Help desk</a></li>
-                        <li><a href="#">Support</a></li>
-                    </ul>
-                </div>
-
-                <div class="footer-links">
-                    <h4>Services</h4>
-                    <ul>
-                        <li><a href="#">Digital Marketing</a></li>
-                        <li><a href="#">Content Writing</a></li>
-                        <li><a href="#">SEO for Business</a></li>
-                        <li><a href="#">UI Design</a></li>
-                    </ul>
-                </div>
-
-                <div class="footer-links">
-                    <h4>Legal</h4>
-                    <ul>
-                        <li><a href="#">Privacy Policy</a></li>
-                        <li><a href="#">Terms & Conditions</a></li>
-                        <li><a href="#">Return Policy</a></li>
-                    </ul>
-                </div>
+      <div class="container">
+        <div class="footer-content">
+          <div class="footer-brand">
+            <h3>Brainwave.io</h3>
+            <p>
+              With lots of unique blocks, you can easily build a page without
+              coding. Build your next landing page.
+            </p>
+            <div class="social">
+              <ul>
+                <li>
+                  <a href="#"><i class="fab fa-twitter"></i></a>
+                </li>
+                <li>
+                  <a href="#"><i class="fab fa-facebook-f"></i></a>
+                </li>
+                <li>
+                  <a href="#"><i class="fab fa-instagram"></i></a>
+                </li>
+                <li>
+                  <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                </li>
+              </ul>
             </div>
+          </div>
+
+          <div class="footer-links">
+            <h4>Company</h4>
+            <ul>
+              <li><a href="#">About us</a></li>
+              <li><a href="#">Contact us</a></li>
+              <li><a href="#">Careers</a></li>
+              <li><a href="#">Press</a></li>
+            </ul>
+          </div>
+
+          <div class="footer-links">
+            <h4>Product</h4>
+            <ul>
+              <li><a href="#">Features</a></li>
+              <li><a href="#">Pricing</a></li>
+              <li><a href="#">News</a></li>
+              <li><a href="#">Help desk</a></li>
+              <li><a href="#">Support</a></li>
+            </ul>
+          </div>
+
+          <div class="footer-links">
+            <h4>Services</h4>
+            <ul>
+              <li><a href="#">Digital Marketing</a></li>
+              <li><a href="#">Content Writing</a></li>
+              <li><a href="#">SEO for Business</a></li>
+              <li><a href="#">UI Design</a></li>
+            </ul>
+          </div>
+
+          <div class="footer-links">
+            <h4>Legal</h4>
+            <ul>
+              <li><a href="#">Privacy Policy</a></li>
+              <li><a href="#">Terms & Conditions</a></li>
+              <li><a href="#">Return Policy</a></li>
+            </ul>
+          </div>
         </div>
+      </div>
     </footer>
-
-
-</body>
+  </body>
 </html>
