--- a/brainwave-main/branwave.io/index.html
+++ b/brainwave-main/branwave.io/index.html
@@ -13,7 +13,7 @@
           <div><a class="header-logo" href="./index.html">Brainwave.io</a></div>
           <ul class="header-nav-list">
             <li class="header-nav-item">
-              <a class="header-nav-link-active" href="./index.html">Home</a>
+              <a class="header-nav-link-active" href="">Home</a>
             </li>
             <li class="header-nav-item">
               <a class="header-nav-link" href="">About us</a>
@@ -23,12 +23,8 @@
             </li>
           </ul>
           <ul class="header-login-lists">
-            <li class="login-item">
-              <a href="/branwave.io/pages/sign-in.html">Login</a>
-            </li>
-            <li class="login-item">
-              <a href="/branwave.io/pages/Sign-up.html">Sign up</a>
-            </li>
+            <li class="login-item"><a href="">Login</a></li>
+            <li class="login-item"><a href="">Sign up</a></li>
           </ul>
         </nav>
       </div>
